Closed Bug 1061512 Opened 11 years ago Closed 11 years ago

[NFC] nfcd should notify gecko about NDEF information

Categories

(Firefox OS Graveyard :: NFC, defect)

ARM
Gonk (Firefox OS)
defect
Not set
normal

Tracking

(Not tracked)

RESOLVED FIXED

People

(Reporter: dimi, Assigned: dimi)

References

Details

Attachments

(2 files, 5 obsolete files)

NFC tag technology is required information for gecko. nfcd should support a way to notify this information
Summary: [NFC] nfcd should notify gecko about tag technology information → [NFC] nfcd should notify gecko about NDEF information
Attachment #8486336 - Flags: review?(allstars.chh)
Attachment #8486337 - Flags: review?(allstars.chh)
Attachment #8486338 - Flags: review?(allstars.chh)
Attachment #8486338 - Attachment is obsolete: true
Attachment #8486338 - Flags: review?(allstars.chh)
Attachment #8489905 - Flags: review?(allstars.chh)
Attachment #8489908 - Flags: review?(allstars.chh)
Comment on attachment 8486337 [details] [diff] [review] Part2. rename NdefDetail to NdefInfo & fill necessary info Review of attachment 8486337 [details] [diff] [review]: ----------------------------------------------------------------- ::: src/nci/NfcTagManager.cpp @@ +136,5 @@ > + pNdefInfo = new NdefInfo(); > + pNdefInfo->ndefType = ndefType; > + pNdefInfo->maxSupportedLength = ndefinfo[0]; > + pNdefInfo->isReadOnly = (ndefinfo[1] == NDEF_MODE_READ_ONLY); > + pNdefInfo->canBeMadeReadOnly = (ndefType == NDEF_TYPE1_TAG || ndefType == NDEF_TYPE2_TAG); It seems we can remove canBeMadeReadOnly
Attachment #8486337 - Flags: review?(allstars.chh)
Attachment #8486336 - Flags: review?(allstars.chh) → review+
Comment on attachment 8489905 [details] [diff] [review] Part3. Add NdefInfo when tech discover Review of attachment 8489905 [details] [diff] [review]: ----------------------------------------------------------------- ::: src/MessageHandler.cpp @@ +354,5 @@ > + return false; > + } > + > + // ndef tyoe > + NfcNdefType type = (NfcUtil::convertNdefType(info->ndefType)); outter () is not neccesary.
Attachment #8489905 - Flags: review?(allstars.chh) → review+
Attachment #8489908 - Flags: review?(allstars.chh) → review+
- Remove canBeMadeReadOnly variable
Attachment #8486337 - Attachment is obsolete: true
Attachment #8493526 - Flags: review?(allstars.chh)
Attachment #8493526 - Flags: review?(allstars.chh) → review+
Attachment #8486336 - Attachment is obsolete: true
Attachment #8489905 - Attachment is obsolete: true
Attachment #8493526 - Attachment is obsolete: true
Attachment #8493653 - Flags: review+
Require merge both of nfcd pull request and gecko part patch
Keywords: checkin-needed
Attachment #8493653 - Attachment description: [2.0] pull request to mozilla-b2g/platform_system_nfcd → pull request to mozilla-b2g/platform_system_nfcd. v2
Status: ASSIGNED → RESOLVED
Closed: 11 years ago
Resolution: --- → FIXED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: