Bug 1061512 - [NFC] nfcd should notify gecko about NDEF information. r=allstars.chh