dom/nfc/gonk/NfcMessageHandler.cpp
@@ -293,6 +293,15 @@ NfcMessageHandler::TechDiscoveredNotification(const Parcel& aParcel, EventOption
   if (ndefMsgCount != 0) {
     ReadNDEFMessage(aParcel, aOptions);
   }
+
+  int32_t ndefInfo = aParcel.readInt32();
+  if (ndefInfo) {
+    NdefType type = static_cast<NdefType>(aParcel.readInt32());
+    int32_t maxSupportLength = aParcel.readInt32();
+    int32_t isReadOnly = aParcel.readInt32();
+    int32_t isFormatable = aParcel.readInt32();
+  }
+
   return true;
 }
 
